# robotics-maze-g1

./: .dockerignore  .env.storage.example  .gitignore  Makefile  README.md  locomotion_calibration.json  requirements-rl.txt  requirements.txt
configs/: default.yaml  g1_locomotion_calibration.yaml  lucky_wide_maze.yaml  navigation_capture_topics.yaml  rl_velocity_controller.yaml  rl_velocity_eval_corridor_sweep_100.yaml
data/: __init__.py
demo/: __init__.py
docker/: Dockerfile  build_multiarch.sh  entrypoint.sh  run.sh  run_gui.sh
docs/: codex_unified_navigation_session_summary.md  data_capture_schema.md  final_kpi_report.md  robot_improvement_report.md  robotics_sim_assignment_milestone_plan.md  worklog.md
eval/: __init__.py
maze/: __init__.py  generator.py  grid.py  validator.py  visualization.py
nav/: __init__.py  controller.py  oracle_follow.py  path_progress.py  planner.py
patches/: m-explore-ros2-humble-latest-tf.patch  m-explore-ros2-known-free-goals.patch
rl_velocity/: __init__.py  config.py  curriculum.py  env.py  metrics.py  path_features.py  sb3_utils.py
ros_ws/src/g1_mujoco_bridge/: package.xml  setup.py
ros_ws/src/g1_mujoco_bridge/config/: bridge.yaml  d435i_depth_to_scan.yaml  slam_toolbox.yaml
ros_ws/src/g1_mujoco_bridge/g1_mujoco_bridge/: __init__.py  artifact_collector.py  bridge_node.py  depth_point_cloud.py  navigation_depth_scan.py  scan_artifact_collector.py  slam_artifact_collector.py  voxel_cloud_to_scan.py
ros_ws/src/g1_mujoco_bridge/launch/: d435i_scan_check.launch.py  d435i_scan_view.launch.py  ros_bridge_check.launch.py  ros_bridge_view.launch.py  slam_map.launch.py
ros_ws/src/g1_mujoco_bridge/rviz/: d435i_scan.rviz  slam_mapping.rviz
ros_ws/src/g1_nav_bringup/: package.xml  setup.cfg  setup.py
ros_ws/src/g1_nav_bringup/behavior_trees/: navigate_through_poses_no_spin.xml  navigate_to_pose_no_spin.xml
ros_ws/src/g1_nav_bringup/config/: depth_imu_ekf.yaml  m_explore.yaml  nav2_exploration_params.yaml  nav2_navigation_params.yaml  nav2_params.yaml  slam_toolbox_ground_truth.yaml  slam_toolbox_livox.yaml
ros_ws/src/g1_nav_bringup/g1_nav_bringup/: __init__.py  corridor_recenter.py  d435i_scan_odometry.py  exploration_reporter.py  frontier_explorer.py  ground_truth_odometry.py  live_kpi_metrics.py  live_kpi_monitor.py  maze_fallback_goal.py  nav2_probe.py  navigation_evaluation.py  navigation_probe.py  odom_tf_republisher.py  pointcloud_imu_odometry.py  run_termination.py  saved_map_tf.py
ros_ws/src/g1_nav_bringup/launch/: nav2_eval.launch.py  nav2_slam.launch.py  navigate_d435i.launch.py
ros_ws/src/g1_nav_bringup/rviz/: nav2_slam.rviz
rosbag/: metadata.yaml  rosbag_0.db3
scripts/: aggregate_navigation_seeds.py  characterize_nav_locomotion.py  check_ros_docker_env.sh  check_storage_layout.sh  create_run_context.py  evaluate_maze_velocity_policy.py  finalize_run_context.py  follow_waypoints.py  g1_loco_sandbox.py  generate_maze.py  generate_world.py  migrate_system_storage.sh  navigation_capture_artifacts.py  open_artifact.py  oracle_run_artifacts.py  plan_path.py  render_navigation_config.py  replay_maze_velocity_policy.py  review_codex_docker_brief.txt  ros_prebuild_needed.sh  run_d435i_visual_check.py  run_episode.py  run_g1_locomotion_calibration.py  run_g1_locomotion_calibration_seed_batch.py  run_g1_oracle_follow.py  run_milestone_4.py  run_milestone_4_planner.py  run_navigation_seed_batch.py  run_tests_report.py  sim_follow_waypoints.py  smoke_test.py  (+3 more)
sim/: __init__.py  (+13 more)
(+33 files in other folders)
