<?xml version="1.0"?>
<package format="3">
  <name>g1_mujoco_bridge</name>
  <version>0.1.0</version>
  <description>ROS 2 Humble bridge for the Robotics Maze G1 MuJoCo sensors.</description>
  <maintainer email="robotics@example.com">Robotics Maze G1</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>depthimage_to_laserscan</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <test_depend>ament_pytest</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
